added a class and added to pointofsale.cs

--- a/pointofsale/pointofsale.csproj
+++ b/pointofsale/pointofsale.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ProductArray.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="receipt.cs" />
     <Compile Include="Validator.cs" />
   </ItemGroup>
   <ItemGroup>
